# MATHUSLA-MLTracker

./: README.md
analysis/: analyzer.py  detector.py  event.py  genTrigger.py  main.py  physics.py  util.py  visualization.py
scripts/: all_digis_and_tracks.py  analyze.py  bethebloch.py  combine_events.py  dedx.py  draw_track_digis.py  ipip.py  particle_id.py  theta.py  total_e.py  vertex_resolution.py  vertexy.py
scripts/visual/: br_ratio.py  cutflow.py  detector.py  draw_energy.py  ebeta.py  main.py  make_plots.py  physics.py  stat.py  track_eff.py  vertexRes.py
tracker/: CMakeLists.txt  tracking.cc  util.hh
tracker/include/: Digitizer.hh  Geometry.hh  LinearAlgebra.hh  ROOT_IO.hh  RunManager.hh  StudiesDoer.hh  TrackFinder.hh  TreeHandler.hh  VertexFinder.hh  deep_learning.hh  globals.hh  physics.hh  statistics.hh  units.hh  util.hh
tracker/src/: Digitizer.cc  LinearAlgebra.cc  Physics.cc  ROOT_IO.cc  RunManager.cc  StudiesDoer.cc  TrackFinder.cc  VertexFinder.cc  tracking.cc
visual/: analyze.py  cutflow.py  draw_energy.py  main.py  physics.py  visualization.py
